syntax = "proto3";

option go_package = "x-cells/generated;physics";

package physics;

// Универсальный сервис для управления объектами
service Physics {
  rpc CreateObject (CreateObjectRequest) returns (CreateObjectResponse);

  rpc ApplyImpulse (ApplyImpulseRequest) returns (ApplyImpulseResponse);

  rpc GetState (GetStateRequest) returns (GetStateResponse);

  rpc Step (StepRequest) returns (StepResponse);
}

// Общий запрос для создания объектов в Bullet + Three
message CreateObjectRequest {
  string id = 1;
  string object_type = 2;
  float x = 3;
  float y = 4;
  float z = 5;
  float mass = 6; 
  float radius = 7; 
  float width = 8; 
  float height = 9; 
  float depth = 10; 
  string color = 11; 
  repeated float height_data = 12; 
  int32 heightmap_width = 13; 
  int32 heightmap_height = 14; 
  float scale_x = 15; 
  float scale_y = 16; 
  float scale_z = 17; 
  float min_height = 18; 
  float max_height = 19; 
}

// Ответ на создание объекта
message CreateObjectResponse {
  string status = 1;
}

// Применить импульс
message ApplyImpulseRequest {
  string id = 1;       // ID объекта
  float impulse_x = 2;
  float impulse_y = 3;
  float impulse_z = 4;
}

message ApplyImpulseResponse {
  string status = 1;
}

// Получить состояние
message GetStateRequest {
  string id = 1;
}

message GetStateResponse {
  float x  = 1;
  float y  = 2;
  float z  = 3;
  float qx = 4;
  float qy = 5;
  float qz = 6;
  float qw = 7;
}

// Шаг симуляции
message StepRequest {
  float dt = 1;
  int32 substeps = 2;
}

message StepResponse {
  string status = 1;
}